# neuroshima-puzzles

./: Cargo.toml  README.md
building_control/: Cargo.toml
building_control/src/: building.rs  device.rs  lib.rs  manage_mode.rs
data/buildings/: dummy_building.json  szczur_sharrash.json  szczur_wausau.json
data/saves/: save_file.json
guess_code/: Cargo.toml
guess_code/src/: lib.rs  lock.rs  lock_error.rs  lock_length.rs
src/: building_config.rs  game_config.rs  lock_config.rs  main.rs  minigame.rs
