[package]
name = "building_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.20.0", features = ["termion-backend"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
